--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "classname": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.0.0",
+    "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
