--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "classname": "^0.0.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
