--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # conflict with heroku
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+
+
+# to get rid of "org.hibernate.LazyInitializationException: could not initialize proxy [com.shangcheng hsieh.udemyCoursePPMT.domain.User#13] - no Session"
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
