--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -10,11 +10,12 @@
     "bootstrap": "^5.2.2",
     "classname": "^0.0.0",
     "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
@@ -25,9 +26,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-
   "proxy": "http://localhost:8080",
-  
   "eslintConfig": {
     "extends": [
       "react-app",
